@@ -1,6 +1,5 @@
 package com.dev
 
-import com.dev.philo.libs
 import org.gradle.api.Project
 import org.gradle.api.tasks.testing.Test
 import org.gradle.kotlin.dsl.dependencies
@@ -11,11 +10,28 @@ internal fun Project.configureKotest() {
     dependencies {
         "testImplementation"(libs.findLibrary("kotest.runner").get())
         "testImplementation"(libs.findLibrary("kotest.assertions").get())
+        "testImplementation"(libs.findLibrary("mockk").get())
+        "testImplementation"(libs.findLibrary("turbine").get())
     }
+}
+
+internal fun Project.configureKotestAndroid() {
+    configureKotest()
+    configureJUnitAndroid()
 }
 
 internal fun Project.configureJUnit() {
     tasks.withType<Test>().configureEach {
         useJUnitPlatform()
+        jvmArgs("--add-opens", "java.base/java.time=ALL-UNNAMED")
+    }
+}
+
+@Suppress("UnstableApiUsage")
+internal fun Project.configureJUnitAndroid() {
+    androidExtension.apply {
+        testOptions {
+            unitTests.all { it.useJUnitPlatform() }
+        }
     }
 }
